ms.lib.ts to ms-lib

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ms.lib.ts",
+  "name": "ms-lib",
   "version": "1.0.3",
   "description": "Library QuickStart package.json from the documentation, supplemented with testing support",
-  "main": "./bundles/ms.lib.ts.umd.js",
-  "module": "./ms.lib.ts.es5.js",
-  "es2015": "./ms.lib.ts.js",
-  "typings": "./ms.lib.ts.d.ts",
+  "main": "./bundles/ms-lib.umd.js",
+  "module": "./ms-lib.es5.js",
+  "es2015": "./ms-lib.js",
+  "typings": "./ms-lib.d.ts",
   "author": "Martin Spasov",
   "license": "MIT",
   "repository": {},
