--- a/bs-config.json
+++ b/bs-config.json
@@ -3,7 +3,7 @@
     "baseDir": "src/demo",
     "routes": {
       "/node_modules": "node_modules",
-      "/ms.lib.ts": "src/lib"
+      "/ms-lib": "src/lib"
     }
   }
 }
