--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ms-lib",
-  "version": "1.0.3",
-  "description": "Library QuickStart package.json from the documentation, supplemented with testing support",
+  "version": "1.0.0",
+  "description": "Library MS package.json from the documentation, supplemented with testing support",
   "main": "./bundles/ms-lib.umd.js",
   "module": "./ms-lib.es5.js",
   "es2015": "./ms-lib.js",
   "typings": "./ms-lib.d.ts",
   "author": "Martin Spasov",
   "license": "MIT",
+  "email": "martospasov@gmail.com",
   "repository": {},
   "engines": {
     "node": ">= 6.9.0",
@@ -37,15 +38,15 @@
     "release": "standard-version"
   },
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
+    "@angular/core": ">=5.0.0 <6.0.0"
   },
   "devDependencies": {
-    "@angular/common": "~4.1.3",
-    "@angular/compiler": "~4.1.3",
-    "@angular/compiler-cli": "~4.1.3",
-    "@angular/core": "~4.1.3",
-    "@angular/platform-browser": "~4.1.3",
-    "@angular/platform-browser-dynamic": "~4.1.3",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
     "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.46",
     "camelcase": "^4.0.0",
@@ -64,15 +65,15 @@
     "lite-server": "^2.2.2",
     "rimraf": "^2.6.1",
     "rollup": "^0.42.0",
-    "rollup-plugin-sourcemaps": "^0.4.1",
-    "rollup-plugin-uglify": "^2.0.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rxjs": "^5.0.1",
+    "rollup-plugin-sourcemaps": "^0.4.1",
+    "rollup-plugin-uglify": "^2.0.1",
+    "rxjs": "^5.5.2",
     "standard-version": "^4.0.0",
     "systemjs": "^0.19.40",
     "tslint": "^4.4.2",
-    "typescript": "~2.3.0",
+    "typescript": "^2.8.3",
     "zone.js": "^0.8.4"
   }
 }
