--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   "es2015": "./ms-lib.js",
   "typings": "./ms-lib.d.ts",
   "author": "Martin Spasov",
+  "homepage": "",
   "license": "MIT",
   "email": "martospasov@gmail.com",
-  "repository": {},
+  "repository": {
+    "url": "https://github.com/maspasov/ms-lib",
+    "type": "git"
+  },
+  "keywords": [
+    "typescript"
+  ],
   "engines": {
     "node": ">= 6.9.0",
     "npm": ">= 3.0.0"
@@ -41,39 +48,47 @@
     "@angular/core": ">=5.0.0 <6.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "camelcase": "^4.0.0",
-    "concurrently": "3.4.0",
-    "core-js": "^2.4.1",
-    "glob": "^7.1.1",
-    "jasmine-core": "^2.5.2",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "5.2.0",
+    "@ngrx/router-store": "5.2.0",
+    "@ngrx/store": "5.2.0",
+    "@ngrx/store-devtools": "5.2.0",
+    "@ngx-translate/core": "10.0.1",
+    "@ngx-translate/http-loader": "3.0.1",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "^9.6.6",
+    "angular": "^1.6.10",
+    "camelcase": "^5.0.0",
+    "concurrently": "3.5.1",
+    "core-js": "^2.5.5",
+    "glob": "^7.1.2",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.1",
     "karma-html-reporter": "^0.2.7",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-coverage": "^0.1.4",
-    "lite-server": "^2.2.2",
-    "rimraf": "^2.6.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-remap-coverage": "^0.1.5",
+    "lite-server": "^2.3.0",
+    "rimraf": "^2.6.2",
     "rollup": "^0.42.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.1",
-    "rollup-plugin-uglify": "^2.0.1",
-    "rxjs": "^5.5.2",
-    "standard-version": "^4.0.0",
-    "systemjs": "^0.19.40",
-    "tslint": "^4.4.2",
+    "rollup-plugin-uglify": "^3.0.0",
+    "rxjs": "5.0.1",
+    "standard-version": "^4.3.0",
+    "systemjs": "^0.21.3",
+    "tslint": "^5.9.1",
     "typescript": "^2.8.3",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.26"
   }
 }
