--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/compiler": "^5.2.10",
     "@angular/compiler-cli": "^5.2.10",
     "@angular/core": "^5.2.10",
+    "@angular/router": "^5.0.0",
     "@angular/platform-browser": "^5.2.10",
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@ngrx/core": "^1.2.0",
@@ -84,11 +85,11 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.1",
     "rollup-plugin-uglify": "^3.0.0",
-    "rxjs": "5.0.1",
+    "rxjs": "^5.5.0",
     "standard-version": "^4.3.0",
     "systemjs": "^0.21.3",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.3",
+    "typescript": "2.4.2",
     "zone.js": "^0.8.26"
   }
 }
